--- a/index.html
+++ b/index.html
@@ -50,14 +50,12 @@
       .page {
         max-width: 1140px;
         margin: 0 auto;
-
       }
 
       header {
         display: flex;
         align-items: center;
         justify-content: flex-start;
-
         flex-wrap: wrap;
       }
 
@@ -72,7 +70,6 @@
         letter-spacing: 0.02em;
         display: inline-flex;
         align-items: center;
-        gap: 10px;
       }
 
       .logo img {
@@ -116,7 +113,7 @@
       }
 
       .hero {
-        margin-top: 70px;
+        margin-top: 10px;
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
         gap: 36px;
@@ -504,7 +501,7 @@
               />
             </svg>
             <div>
-              <span>Baixar na</span>
+              <span>Disponível na</span>
               <strong>App Store</strong>
             </div>
           </a>
