fixes for responsive.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       .page {
         max-width: 1140px;
         margin: 0 auto;
+        padding: 28px 24px 60px;
       }
 
       header {
@@ -57,6 +58,7 @@
         align-items: center;
         justify-content: flex-start;
         flex-wrap: wrap;
+        gap: 18px;
       }
 
       header .store-badges {
@@ -73,9 +75,10 @@
       }
 
       .logo img {
-        width: 256px;
-        height: 256px;
+        width: 220px;
+        height: auto;
         object-fit: contain;
+        max-width: 100%;
       }
 
       nav {
@@ -147,7 +150,7 @@
         flex-wrap: wrap;
         color: var(--muted);
         font-size: 0.95rem;
-        justify-content: center;
+        justify-content: flex-start;
       }
 
       .hero > .hero-meta {
@@ -377,13 +380,18 @@
         font-size: 0.85rem;
       }
 
-      @media (max-width: 720px) {
-        .footer-grid {
-          grid-template-columns: 1fr;
-          gap: 14px;
+      @media (max-width: 1024px) {
+        .page {
+          padding: 24px 20px 52px;
         }
-        .logo img { width: 160px; height: auto; }
-      }
+
+        .hero {
+          gap: 28px;
+        }
+
+        .hero-card {
+          padding: 24px;
+        }
       }
 
       .footer-actions {
@@ -501,6 +509,58 @@
         .step {
           flex-direction: column;
           align-items: flex-start;
+        }
+
+        .features {
+          grid-template-columns: 1fr;
+        }
+
+        .footer-grid {
+          grid-template-columns: 1fr;
+          gap: 14px;
+          text-align: left;
+        }
+
+        .footer-links {
+          grid-column: auto;
+          justify-self: start;
+          text-align: left;
+        }
+
+        .logo img {
+          width: 170px;
+        }
+      }
+
+      @media (max-width: 600px) {
+        .page {
+          padding: 20px 16px 44px;
+        }
+
+        h1 {
+          font-size: clamp(2.2rem, 8vw, 3rem);
+        }
+
+        .section-title {
+          font-size: 1.6rem;
+        }
+
+        .section-subtitle {
+          font-size: 0.98rem;
+        }
+
+        .hero-meta {
+          font-size: 0.9rem;
+          gap: 10px;
+        }
+
+        .step {
+          padding: 16px;
+        }
+
+        .store-badge {
+          flex: 1 1 160px;
+          justify-content: center;
         }
       }
     </style>
