fixes for responsive.

--- a/index.html
+++ b/index.html
@@ -491,11 +491,21 @@
 
         header {
           flex-direction: column;
-          align-items: flex-start;
+          align-items: center;
         }
 
         header .store-badges {
           margin-left: 0;
+        }
+
+        .store-badges {
+          width: 100%;
+          justify-content: center;
+        }
+
+        .logo {
+          width: 100%;
+          justify-content: center;
         }
 
         .hero {
