fixes for responsive.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>vamoali.app - hotéis e passagens com foco no viajante</title>
+    <title>Vamoali - hotéis e passagens aéreas com foco total em você</title>
     <meta
       name="description"
       content="vamoali.app facilita a compra de hotéis e passagens aéreas com transparência, segurança e foco no usuário."
