fixes for responsive.

--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
             <a href="#manifesto">Proposta</a>
             <a href="#recursos">Benefícios</a>
             <a href="#como">Como funciona</a>
-            <a href="#acesso">Contato</a>
+            <a href="mailto:contato@vamoali.app">Contato</a>
           </div>
         </div>
         <div class="footer-bottom">vamoali.app © 2026 — Tecnologia para buscar hotéis e passagens aéreas utilizando IA para uma melhor experiência.</div>
